baml_language/crates/baml_tests/snapshots/compiles/json_to_from_string_composite_generic/baml_tests__compiles__json_to_from_string_composite_generic__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.Container {
  item: user.T
}
class user.User {
  name: string
}
function user.decode_container(s: string) -> user.Container  [expr] {
  {  } baml.json.from_string(s)
}
function user.from_json(j: baml.json.json) -> user.User  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.Container  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "item": baml.json.to_json(self.item) }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "name": self.name.to_json() }
}
