baml_language/crates/baml_tests/snapshots/compiles/json_to_from_string_composite_generic/baml_tests__compiles__json_to_from_string_composite_generic__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.decode_container(s: string) -> Container<User> {
    // Locals:
    let _0: Container<User> // _0 // return
    let _1: string // s // param
    let _2: type

    bb0: {
        _2 = load_type(Container<User>);
        _0 = call const fn baml.json.from_string<copy _2>(copy _1) -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.User.from_json(j: baml.json.json) -> User {
    // Locals:
    let _0: User // _0 // return
    let _1: baml.json.json // j // param
    let _2: string
    let _3: type

    bb0: {
        _2 = call const fn baml.json.stringify(copy _1) -> [bb1];
    }

    bb1: {
        _3 = load_type(User);
        _0 = call const fn baml.json.from_string<copy _3>(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.Container.from_json(j: baml.json.json) -> Container<void> {
    // Locals:
    let _0: Container<void> // _0 // return
    let _1: baml.json.json // j // param
    let _2: string
    let _3: type

    bb0: {
        _2 = call const fn baml.json.stringify(copy _1) -> [bb1];
    }

    bb1: {
        _3 = load_type(Container<#0>);
        _0 = call const fn baml.json.from_string<copy _3>(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.Container.to_json(self: Container) -> baml.json.json {
    // Locals:
    let _0: baml.json.json // _0 // return
    let _1: Container // self // param
    let _2: baml.json.json
    let _3: () -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError
    let _4: void
    let _5: Container
    let _6: string

    bb0: {
        _5 = copy _1;
        _4 = copy _5.0;
        _6 = const "to_json";
        _3 = copy _4[_6];
        _2 = call copy _3() -> [bb1];
    }

    bb1: {
        _0 = { const "item": copy _2 };
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.User.to_json(self: User) -> baml.json.json {
    // Locals:
    let _0: baml.json.json // _0 // return
    let _1: User // self // param
    let _2: baml.json.json
    let _3: string
    let _4: User

    bb0: {
        _4 = copy _1;
        _3 = copy _4.0;
        _2 = call const fn baml.String.to_json(copy _3) -> [bb1];
    }

    bb1: {
        _0 = { const "name": copy _2 };
        goto -> bb2;
    }

    bb2: {
        return;
    }
}
