baml_language/crates/baml_tests/snapshots/compiles/json_to_from_string_composite_generic/baml_tests__compiles__json_to_from_string_composite_generic__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.User {
  name: string
}
class user.Container {
  item: T
}
function user.decode_container(s: string) -> user.Container<user.User> throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  { : user.Container<user.User>
    baml.json.from_string<T>(s) : user.Container<user.User>
  }
}
class user.User$stream {
  name: null | string
}
class user.Container$stream {
  item: null | unknown
}
