baml_language/crates/baml_tests/snapshots/compiles/json_to_from_string_composite_generic/baml_tests__compiles__json_to_from_string_composite_generic__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.Container.from_json(j: baml.json.json) -> Container<void> {
    load_var j
    call baml.json.stringify
    store_var _2
    load_type Container<#0>
    load_var _2
    call baml.json.from_string
    return
}

function user.Container.to_json(self: null) -> baml.json.json {
    load_var self
    load_field .item
    call baml.json.to_json
    load_const "item"
    alloc_map 1
    return
}

function user.User.from_json(j: baml.json.json) -> User {
    load_var j
    call baml.json.stringify
    store_var _2
    load_type User
    load_var _2
    call baml.json.from_string
    return
}

function user.User.to_json(self: null) -> baml.json.json {
    load_var self
    load_field .name
    call baml.String.to_json
    load_const "name"
    alloc_map 1
    return
}

function user.decode_container(s: string) -> Container<User> {
    load_type Container<User>
    load_var s
    call baml.json.from_string
    return
}
